syntax = "proto3";

package protocol.v1;

option go_package = ".;v1";

message Header {
    MessageType messageType = 1;
    string requestType = 2;
    bytes requestId = 3;
}

enum MessageType {
    UNKNOWN = 0;
    MESSAGE = 1;
    FILE = 2;
    FILE_MESSAGE = 3;
    MESSAGE_W_RESPONSE = 4;
    FILE_W_RESPONSE = 5;
    FILE_MESSAGE_W_RESPONSE = 6;
    RESPONSE_MESSAGE = 7;
    RESPONSE_FILE = 8;
    RESPONSE_FILE_MESSAGE = 9;
}

message Message {
    bytes data = 1;
}

message FileInfo {
    bytes fileInfo = 1;
}

message Response {
    bytes data = 1;
}